--- a/cardStyle.css
+++ b/cardStyle.css
@@ -51,10 +51,10 @@ nav ul a {
 	margin-right: 0.8em;
 } */
 
-/* .body-div1, .body-div2 {
+.body-div1, .body-div2 {
 	margin-left: 150px;
 	margin-right: 150px;
-} */
+}
 
 .body-div1 {
 	margin-top: 25px;
@@ -67,11 +67,22 @@ nav ul a {
 }
 
 .article-card {
+	/* background-color:red; */
+	position: absolute;
+	top: -35%;
 	width: 320px;
 	margin: 30rem 0;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+}
+
+.card-text {
+	display: none;
+	width: 98%;
+	padding: 5px;
+	border-radius: 5px;
+	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.356);
 }
 
 .article-card h1 {
@@ -86,7 +97,9 @@ nav ul a {
 	font-size: 17px;
 	line-height: 22px;
 	margin: 15px 0;
+	word-wrap: break-word;
 }
+
 
 #image{
 	margin-top: 30px;
@@ -94,7 +107,7 @@ nav ul a {
 .body-div2 {
 	display: flex;
 	flex-direction: row ;
-	/* justify-content: space-between; */
+	justify-content: space-between;
 	float: left;
 }
 
